# excludarr

./: .coverage  .gitignore  Globale Datenquellen für Streaming-Verfügbarkeiten.md  README.md  availability_cache.db  excludarr.yml  main.py  pyproject.toml  test_jellyseerr_config.py  test_jellyseerr_extended.py  test_jellyseerr_live.py
.github/workflows/: build.yml  ci.yml  quick-test.yml
excludarr/: __init__.py  availability.py  availability_cache.py  cli.py  config.py  jellyseerr.py  logging.py  models.py  provider_manager.py  providers.py  simple_cache.py  sonarr.py  streaming_availability_client.py  sync.py  tmdb_client.py  utelly_client.py
excludarr/data/: providers.json
tests/: __init__.py  mock_jellyseerr_server.py  test_availability_cache.py  test_availability_checker_enhanced.py  test_cli.py  test_config.py  test_jellyseerr.py  test_jellyseerr_integration.py  test_logging.py  test_mock_jellyseerr_server.py  test_provider_manager.py  test_providers.py  test_simple_cache.py  test_sonarr.py  test_streaming_availability_client.py  test_sync.py  test_tmdb_client.py  test_utelly_client.py
